--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,6 @@ filelock==3.13.1
 flatbuffers==23.5.26
 fsspec==2024.2.0
 gast==0.5.4
-google-auth==2.28.1
-google-auth-oauthlib==1.2.0
 google-pasta==0.2.0
 grpcio==1.62.0
 h5py==3.10.0
@@ -26,7 +24,6 @@ ml-dtypes==0.2.0
 mpmath==1.3.0
 networkx==3.2.1
 numpy==1.26.4
-oauthlib==3.2.2
 opt-einsum==3.3.0
 packaging==23.2
 pandas==2.2.1
@@ -53,6 +50,7 @@ tensorflow-io-gcs-filesystem==0.36.0
 termcolor==2.4.0
 threadpoolctl==3.3.0
 torch==2.2.1
+tqdm==4.66.2
 typing_extensions==4.10.0
 tzdata==2024.1
 urllib3==2.2.1
