--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ blessed==1.20.0
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
+contourpy==1.2.0
+cycler==0.12.1
 editor==1.6.6
 filelock==3.13.1
 flatbuffers==23.5.26
+fonttools==4.49.0
 fsspec==2024.2.0
 gast==0.5.4
 google-pasta==0.2.0
@@ -17,9 +20,11 @@ inquirer==3.2.4
 Jinja2==3.1.3
 joblib==1.3.2
 keras==2.15.0
+kiwisolver==1.4.5
 libclang==16.0.6
 Markdown==3.5.2
 MarkupSafe==2.1.5
+matplotlib==3.8.3
 ml-dtypes==0.2.0
 mpmath==1.3.0
 networkx==3.2.1
@@ -27,10 +32,12 @@ numpy==1.26.4
 opt-einsum==3.3.0
 packaging==23.2
 pandas==2.2.1
+pillow==10.2.0
 prettytable==3.10.0
 protobuf==4.25.3
 pyasn1==0.5.1
 pyasn1-modules==0.3.0
+pyparsing==3.1.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
 readchar==4.0.5
