--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-kardia-obfuserdata.csv
 .python-version
 *.pyc
+src/statistics/graphs/images/*
+src/data/*
 tempCodeRunnerFile.py
 userdata.csv
-dummy_data.csv
-src/statistics/graphs/images/*
