--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ kardia-obfuserdata.csv
 userdata.csv
 tempCodeRunnerFile.py
 __pycache__*
+kardia_data_one_year.csv
+# 1709854287*
+*.pptx
+kardia_data_five_years.csv
