--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ userdata.csv
 tempCodeRunnerFile.py
 __pycache__*
 kardia_data_one_year.csv
-# 1709854287*
+1709854287*
 *.pptx
 kardia_data_five_years.csv
+results*
