--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,9 @@
 .python-version
 *.pyc
 src/statistics/graphs/images/*
-#src/data/*
+src/statistics/tables/*
+src/data/generated/*
+src/data/input/*
 tempCodeRunnerFile.py
-userdata.csv
-ratings.csv
-app_ratings.csv
-apps.csv
-unique_apps.csv
-users.csv
-kardia_data_five_years.csv
-kardia_data_one_year.csv
 train_app.tfrecord
 test_app.tfrecord
